--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@
 
 @font-face {
   font-family: 'Elianto';
-  src: url('./Fonts/Elianto-Regular.ttf') format('truetype');
+  src: url('./Fonts/Elianto-Regular.woff') format('woff');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
