--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,17 @@ html, body, #root {
   width: 100%;
   height: 100%;
 }
+@font-face {
+  font-family: 'Elianto';
+  src: url('/Fonts/Elianto-Regular.woff') format('woff');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Elianto';
+  src: url('/Fonts/Elianto-Regular.ttg') format('trutype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
