--- a/src/App.css
+++ b/src/App.css
@@ -127,6 +127,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 1; /* Lowest z-index */
 }
 .particles-canvas {
