--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   padding-bottom: env(safe-area-inset-bottom);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  font-family:"Elianto"
+  font-family:"Elianto";
+  overflow-y: auto;
+  max-height: 100vh;
 }
 .fade-out {
   opacity: 0;
@@ -42,11 +44,42 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
+  max-width: 60%;
   gap: 20px;
-  margin-left: 7.5vh;
-  margin-top:19vh;
   z-index: 3;
 }
+.page-links:hover{
+  transform: scale(1.2);
+  color:white !important;
+}
+.flex-container-right {
+  padding-right: 3vh;
+  padding-left: 8%;
+  font-size: calc(min(1.75vh, 1.75vw) + .25vw);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-start;
+  gap: 5vh;
+  z-index: 3;
+  max-width: 40%;
+  max-height: 90vh;
+  opacity: 0;
+  animation: fadeIn 4s forwards;
+  color: #bdc3c7;
+  font-weight: 700;
+  text-align: right;
+  overflow-wrap: break-word;
+  overflow-y: auto;
+  position: relative;
+}
+
+.page-links{
+margin-top:0;
+padding-top:0;
+transition: transform 0.5s;
+}
+
 
 .face-container {
   display: flex;
@@ -55,7 +88,7 @@ a:hover {
   opacity: 0;
   animation: fadeIn 3s forwards;
   position: relative; /* If needed, but avoid absolute */
-  z-index:3;
+  z-index:6;
   color: #bdc3c7;
   font-size: calc(min(1.25vh, 1.75vw) + .25vw);
   font-weight: 700;
@@ -64,8 +97,9 @@ a:hover {
 
 .my-face{
   color: #bdc3c7;
-  font-size: calc(min(1.7vh, 1.7vw) + .25vw);
+  font-size: calc(min(1.75vh, 1vw) + .25vw);
   opacity: 0;
+  z-index:10;
   animation: fadeIn 4s forwards;
   font-weight: 700;
 }
@@ -143,12 +177,12 @@ a:hover {
   color: #bdc3c7;
 }
 .new-page-description {
-  max-width: 50%; /* Ensure it doesn't occupy the entire row. Adjust as necessary */
+  max-width: 100%; /* Ensure it doesn't occupy the entire row. Adjust as necessary */
   max-height: 90vh; /* Set a maximum height for the container. You can adjust this as per your design */
   opacity: 0;
   animation: fadeIn 4s forwards;
   color: #bdc3c7;
-  font-size: calc(min(1.75vh, 1.75vw) + .25vw);
+  font-size: calc(min(1.75vh, 1vw) + .25vw);
   font-weight: 700;
   text-align: left;
   z-index: 3;
@@ -180,19 +214,56 @@ a:hover {
   left: 50%; /* Center the card horizontally */
   transform: translate(-50%, -50%); /* Necessary for centering */
   background-color: transparent; /* Adjust color as needed */
- /* Adjust border as needed */
   padding: 20px; /* Adjust padding as needed */
-  z-index: 5; /* Positioning above other elements */
+  z-index: 10; /* Positioning above other elements */
 }
 
 .photo-card img {
-  max-width: 100%; /* Make the image responsive */
-  height: auto;
-  z-index: 5
+  width: 80%; /* reduce to 80% of its container's width */
+  height: auto; /* maintain the aspect ratio */
+  margin: 0 auto; /* center the image horizontally */
+  display: block; /* make sure the image is a block element for margin to work */
 }
 
-/* rest of the code */
 
+.new-page-layout {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+  z-index: 3;
+  margin-right: 2vw;
+  margin-left: 5vw;
+  margin-top: 19vh;
+}
+
+/* NEW PAGE MOBILE */
+@media (max-width: 756px) {
+  .new-page-layout {
+    margin-top: 100px;
+    flex-direction: column;
+    align-items: center;
+    max-height: calc(100vh - 100px);
+  }
+  .flex-container {
+    max-width: 100%;
+    margin-right: 2vw;
+  }
+  .new-page-description, .my-face {
+    font-size: calc(min(2vh, 2vw) + .25vw);
+  }
+  .flex-container-right{
+    max-width: 100%;
+  }
+  .flex-container-right, .page-links {
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    padding-top: 4vw;
+    margin-right:calc(min(2vh, 2vw) + .25vw);
+    font-size: calc(min(2vh, 2vw) + .25vw);
+  }
+}
 
 .App.hidden {
   visibility: hidden;
@@ -307,6 +378,7 @@ a:hover {
 
 .hamburger-container {
   position: absolute;
+  flex: 0 0 auto;
   right: 5%;
   display: flex;
   flex-direction: column;
@@ -360,7 +432,7 @@ a:hover {
 .logo-container {
   flex: 1;
   display: flex;
-  padding-right: 5%;
+
   justify-content: center;
   align-items: center;
 }
@@ -369,8 +441,34 @@ a:hover {
   cursor: url('hand.png'), pointer;
   height: 40px;
   animation: fadeLogo 7s linear infinite;
+  padding-right:5vw;
 }
 
+.upper-right{
+  border: 1px solid;
+  cursor: url('hand.png'), pointer;
+  dispplay: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.language-buttons {
+  z-index:4;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 10px;  /* Adjust the gap between the buttons as needed */
+  right:0;
+  margin-right: 10vw;
+  
+}
+.language-en, .language-de, .language-fa{
+  background-color: transparent;
+  text-decoration: none;
+  border:none;
+  color: white;
+  cursor: url('hand.png'), pointer;
+
+}
 .nav-item-toggle-button {
   flex-shrink: 0;
   color: white;
@@ -378,6 +476,7 @@ a:hover {
   cursor: url('hand.png'), pointer;
   font-size: 20px;
   font-weight: bold;
+
 }
 .arrow-button {
   position: absolute;
