--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ html, body, #root {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
+  max-height: 100vh;
 }
 @font-face {
   font-family: 'Elianto';
