--- a/src/App.css
+++ b/src/App.css
@@ -49,8 +49,45 @@ a:hover {
   z-index: 3;
 }
 .page-links:hover{
-  transform: scale(1.2);
-  color:white !important;
+  transform: scale(1.3);
+  cursor: url('hand.png'), pointer;
+}
+
+.music-overlay {
+  position: fixed;
+  border-radius:30px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 92%;
+  height: 92%;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+
+.close-button {
+  position: absolute;
+  top: 5vh;
+  right: 5vw;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+.video-close-button{
+  position: absolute;
+  top: 5vh;
+  right: 5vw;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
 }
 .flex-container-right {
   
@@ -78,7 +115,8 @@ a:hover {
   white-space: nowrap;      /* Prevent contents from wrapping */
         /* Hide any overflow */
   /* Add an ellipsis if content is too wide */
-  width: 100%;              /* Ensure it takes up the maximum width of the parent */     /* Existing style */
+  width: 100%; 
+  color: white;             /* Ensure it takes up the maximum width of the parent */     /* Existing style */
   margin-top: 0;            /* Existing style */
   padding-top: 0;           /* Existing style */
   transition: transform 0.5s; /* Existing style */
@@ -93,8 +131,8 @@ a:hover {
   animation: fadeIn 3s forwards;
   position: relative; /* If needed, but avoid absolute */
   z-index:6;
-  color: #bdc3c7;
-  font-size: calc(min(1.25vh, 1.75vw) + .25vw);
+  color: white;
+font-size: calc(min(.75vh, 1vw) + .25vw);
   font-weight: 700;
   cursor: url('hand.png'), pointer;
 }
@@ -108,10 +146,33 @@ a:hover {
   font-weight: 700;
 }
 
+.second-new-page{
+  z-index:6;
+}
+.second-new-page-particles-canvas {
+  opacity: 1;
+  transition: opacity 1.4s ease-out;
+  z-index:1
+}
+
+.second-new-page-particles-canvas.fade-out-canvas {
+  opacity: 0;
+}
+
 .my-face:hover{
   z-index:6;
   color: white !important;
 }
+.fade-out-canvas {
+  animation: fadeOut 1.5s forwards;
+}
+
+@keyframes fadeOut {
+  to {
+      opacity: 0;
+  }
+}
+
 
 .header-text {
   position: absolute;
@@ -185,6 +246,7 @@ a:hover {
   color: #bdc3c7;
 }
 .new-page-description {
+
   max-width: 100%; /* Ensure it doesn't occupy the entire row. Adjust as necessary */
   max-height: 90vh; /* Set a maximum height for the container. You can adjust this as per your design */
   opacity: 0;
@@ -403,7 +465,9 @@ a:hover {
   padding: 0;
   text-align: center;
 }
-
+.hidden {
+  display: none;
+}
 .nav-links-dropdown {
   position: absolute; /* Positioning relative to the container */
   top: 100%; /* Positioning just below the hamburger menu */
@@ -499,6 +563,12 @@ a:hover {
   outline: none;
   z-index: 4;
   animation: fadeLogo 1s linear infinite;
+}
+
+.arrow-text{
+  font-size: calc(min(1vh, 1vw) + .25vw);;
+  font-family:"Elianto";
+  z-index:4;
 }
 @media (max-width: 768px) {
   .navbar-logo {
