--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Elianto", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
-  --bg-gradient-light: linear-gradient(to bottom, #344c6c, #ac817a); 
+  --bg-gradient-light: linear-gradient(to bottom, #344c6c, #ac817a);
   --bg-gradient-dark: linear-gradient(to bottom, #141d28, #936d67);
   --bg-gradient: var(--bg-gradient-light);
-    
-  color-scheme: light dark;
+
   color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
